# Stone-Soup

./: .codecov.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  02_ParticleFilter.py  CITATION.cff  Check2Python.py  GenericCSVFileReader.py  LICENSE  MANIFEST.in  Particle_filter.py  README.md  RaoBlackwellised.py  TAN_EXAMPLE.py  TRN_EXAMPLE.py  TRN_EXAMPLE_HIGH_FLAT.py  TRN_EXAMPLE_HIGH_HILLY.py  TRN_EXAMPLE_LOW_FLAT.py  TRN_EXAMPLE_LOW_HILLY.py  TRN_EXAMPLE_MID_FLAT.py  TRN_EXAMPLE_MID_HILLY.py  config.json  functions.py  functions_for_particle_filter.py  main.py  mosquito_coordinates.csv  multi_model_particle_filter_example.py  multi_model_particle_filter_testing.py  particle.py  pokus1.py  probability.py  pyproject.toml  requirements.txt  runmanager.py  runmanager_template.py  setup.cfg  setup.py  (+4 more)
.circleci/: config.yml  install_coverage_subprocess_pth.py
.github/: CODEOWNERS  release.yml
.github/workflows/: docs-link.yml  docs-preview.yml  docs.yml  lint.yml  test-results.yml  tests.yml
Notebooks/: Single Rotating Radar Simulation & Single-Target Tracking.ipynb  Stone Soup AIS Demo.ipynb  Stone Soup Alpha Demo.ipynb  Stone Soup JPDA Demo.ipynb  Stone Soup Metrics Demo - pull request version.ipynb  Stone Soup PDA Demo.ipynb  Stone Soup Run Manager Demo-Rev 01.ipynb  Stone Soup Run Manager Demo.ipynb  Tracker_Constructor.ipynb  sample_MMSI_tracks.json
Notebooks/.ipynb_checkpoints/: Stone Soup JPDA Demo-checkpoint.ipynb  Stone Soup Metrics Demo - pull request version-checkpoint.ipynb  Stone Soup PDA Demo-Copy1-checkpoint.ipynb  Stone Soup Run Manager Demo-Rev 01-checkpoint.ipynb  Stone Soup Run Manager Demo-checkpoint.ipynb
ReinforcementLearning/configs/: config.yaml  old_scenario_config.yaml  plot_config.yaml  scenario_config.yaml
ReinforcementLearning/environment/: baseline_agent_andrew.py  gym.py
ReinforcementLearning/scripts/: callbacks.py  eval.py  restore_training.py  run_env.py  yaml_generator.py
ReinforcementLearning/tests/: test_gen_yaml.py  test_gym.py  test_run_env.py
ReinforcementLearning/utils/: rl_utils.py  scenario_utils.py
StoneSoup/: pyproject.toml
StoneSoup/docs/: Makefile  ci-requirements.txt
StoneSoup/stonesoup/: __init__.py  buffered_generator.py
binder/: postBuild  requirements.txt
docs/: ci-requirements.txt  make.bat
docs/demos/: AIS_Solent_Tracker.py  Cell_Tracking.py  OpenSky_Demo.py  OpenSky_Plane_States.csv  Smooth_Platform_Coordinate_Transitions.py  UAV_Rot.csv  UAV_tutorial.py  Video_Processing.py
docs/examples/: 3D plotting.py  Animated_Plotters.py  BCC_Track_Fusion.py  Classifying_Using_HMM.py  Comparing_EHM_JPDA_example.py  Creating_Actionable_Sensor.py  Custom_Pandas_Dataloader.py  Disjoint_Tracking_Classification.py  ELPF_multitarget_example.py  EnsembleFilterExample.py  Example_data_fusion_from_sensors.py  Generic_Association.py  HiddenMarkovModel.py  KalmanFilterOOSMExample.py  MFA_example.py  MTT_3D_Platform.py  Matlab_Wrapper.py  Metrics.py  Moving_Platform_Simulation.py  Multi_Tracker_Example.py  Naive_Classification.py  Nonlinear_measurement_IPLF.py  ODE_example.py  (+30 more)
dstl-mast/: .flake8  .pre-commit-config.yaml
examples/: gp_example.py  imm_example.py  imm_example2.py  imm_example3.py  jipda_example.py  run_2dcapon_kf.py  simple_sqrt_kalman.py  smcphd-example.py  wami.py  wami_with_ID.py
liverpool-walk-tutorial/: Makefile  make.bat
stonesoup/: __init__.py  __main__.py  astro_functions.py  astronomical_conversions.py  base.py  buffered_generator.py  config.py  functions.py  gaussianprocess.py  jpl_wrapper.py  kernel.py  measures.py  non_state_measures.py  orbital_functions.py  plotter.py  plotter3.py  plotting.py  plugins.py  run.py  serialise.py  stitcher.py
(+1291 files in other folders)
