[metadata]
name = stonesoup
description = A tracking and state estimation framework
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Defence Science and Technology Laboratory UK
maintainer_email = stonesoup@dstl.gov.uk
url = https://github.com/dstl/Stone-Soup
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.8
packages = find:
install_requires =
    matplotlib
    numpy>=1.17
    ordered-set
    pymap3d
    ruamel.yaml>=0.16.5
    rtree
    scipy
    utm

[options.extras_require]
dev =
    confluent-kafka
    flake8<5
    folium
    h5py
    pandas
    ortools
    pillow
    plotly
    pytest-flake8
    pytest-cov
    pytest-remotedata
    pytest-skip-slow
    Sphinx
    sphinx_rtd_theme>=1.2
    sphinx-gallery>=0.10.1
video =
    ffmpeg-python
    moviepy
    opencv-python
tensorflow =
    tensorflow>=2.2.0
tensornets =
    tensorflow>=2.2.0
    tensornets
orbital =
    astropy
mfa =
    ortools
ode = 
	torch
	
[options.packages.find]
exclude =
    docs
    *.tests
